--- a/first.html
+++ b/first.html
@@ -1,6 +1,12 @@
 <html>
 <head> Web Tech B </head>
+  <script>
+    console.log("Hello");
+  </script>
 <body>
-　最初のページ
+  <p>最初のページ</p>
+  <script>
+    console.log("Good bye");
+  </script>
 </body>
 </html>
